further refinement of CV and portfolio page wording

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9; font-family: 'oldenbury', serif; font-weight: bold;">
           Welcome and thanks for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
       </span></p>
-      <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>
+      <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">
         <i class="fa fa-comment-o" aria-hidden="true" style=""></i> <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">edwinfcau@gmail.com</a>.
       </p>
     </td>
@@ -58,7 +58,7 @@
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
 <!--      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;"> -->
       <center>
-      <img alt="Edwin bio picture" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5%; margin-bottom: 15%;">
+      <img alt="Edwin bio picture" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5px; margin-bottom: 10px;">
       <p style="color: #333333; font-family: 'oldenbury', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.1">Edwin Au<br><span style="font-weight: normal; font-size: 9.5pt; color: #666666; font-family: 'lato', san-serif">Digital Designer</span></p>
     </center>
 
@@ -70,10 +70,31 @@
 
 <!--BLG Section 3 columns-->
 
-<table class="threecoloumntables" style="margin-top: 3%;">
+<table class="threecoloumntables" style="margin-top: 15px">
 
   <tr>
     <td colspan="3">
+      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 20px;">
+    <span style="font-family: 'oldenbury', serif; font-style: italic; font-weight: 900; font-style: italic; font-size: 16pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;">
+  Design transcends mere appearances &mdash; it's about how&nbsp;it&nbsp;functions.</span><br>
+      </p>
+    </td>
+  </tr>
+
+
+  <tr>
+    <td colspan="3">
+      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 20px;">
+      <!--I use critical design thinking and thorough research to create impactful designs that enhance users' experiences &ndash; bringing user interface, user experience and digital design at the forefront.
+      I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
+I use critical design thinking and comprehensive research to craft impactful designs that enrich user experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
+    </p>
       <p class="portfolio-tabs-blue " style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
 
           2020 - 2024 | Digital Designer - Borden Ladner Gervais LLP
@@ -240,17 +261,17 @@
 <table class="threecoloumntables">
 <tr>
   <td colspan="3">
-    <p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
-      As a digital designer specializing in web, apps, and social media platforms, my aim is in crafting designs that captivate audiences endlessly. I believe design transcends mere appearances; it's about how it functions. Employing critical design thinking and thorough research, I create holistic designs that enhance the user experience. I also leverage prompt engineering and AI tools when necessary to elevate designs to new heights.</p><br>
-  <td>
+  <!--<p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
+      As a digital designer specializing in web, apps, and social media platforms, my aim is in crafting designs that captivate audiences endlessly. I believe </p>-->
 
+      <p class="resume-prompt " style="margin-top: 20px; margin-bottom: 20px;">
+      I have skills in video creation and editing - integrating animation and sounds.  I work with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
+  <td>
 </tr>
 
 </table>
 
 <table class="threecoloumntables">
-
-
   <tr>
 
     <td class="threebythreegrid" style="border: 5px solid #ffffff;">
@@ -308,18 +329,17 @@
 </table>
 
 <table class="threecoloumntables">
-<tr>
-  <td colspan="3">
-    <p class="resume-prompt " style="margin-top: 2%; margin-bottom: 5%;">
-    I also have skills in video creation and video editing.  I work with the team to brainstorm video ideas that are used on company social media channels and webpages.</p><br>
+   <tr>
+     <td colspan="3">
 
-    <center>
-    <hr style="margin: 0; background-color: #efefef; width:94%;">
-  </center><br>
+       <p class="resume-prompt" style="margin-top:20px; margin-bottom: 40px;">
+       <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.--> I delved into learning prompt engineering and AI tools, harnessing their potential to elevate designs to new heights.</p>
 
-  <td>
-
-</tr>
+       <center>
+       <hr style="margin: 0; background-color: #efefef; width:94%; margin-top: 40px; margin-bottom: 10px;">
+     </center>
+     </td>
+   </tr>
 
 </table>
 
@@ -330,18 +350,18 @@
 
     <td class="threebythreegridaboutme" style="">
       <img alt="About Me User Centric" src="images/AboutMe-Icon-3.png" class="about-me-thumbnails">
-      <p>User-Centric<br>Design&nbsp;Advocate</p>
+      <p>User-Centric</p>
     </td>
 
     <td class="threebythreegridaboutme" style="">
      <img alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png" class="about-me-thumbnails">
-     <p>Creative<br>Problem&nbsp;Solver</p>
+     <p>Problem&nbsp;Solver</p>
     </td>
 
 
     <td class="threebythreegridaboutme" style="">
       <img alt="About Me Team Player" src="images/AboutMe-Icon-1.png" class="about-me-thumbnails">
-      <p>Dynamic<br> Team&nbsp;Player</p>
+      <p>Lead by Example</p>
     </td>
 
   </tr>
@@ -357,8 +377,18 @@
     <td colspan="3" class="threebythreegrid">
 
       <center>
-      <hr style="margin: 0; background-color: #efefef; width:94%;">
-    </center><br>
+      <hr style="margin: 0px 0px 0px 0px; background-color: #efefef; width:94%;">
+    </center>
+
+
+
+
+
+    <br>
+ <p class="resume-prompt" style="margin-top:20px; margin-bottom: 40px;">
+  Each project I undertake is my commitment in delivering impactful visual designs that function intuitively and effectively.
+</p>
+
 
       <p style="background: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato';margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2017 - 2020 | Digital Designer - Blake, Cassels & Graydon LLP</p>
     </td>
@@ -544,19 +574,15 @@
 <tr>
   <td class="threebythreegrid" colspan="3">
 
-    <p class="resume-prompt" style="margin-top:3%; margin-bottom: 3%;">
-      My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour. Each project I undertake is a testament to my commitment to delivering designs that not only look visually pleasing but also function intuitively and effectively.</p>
-      <center>
-      <hr style="margin: 0; background-color: #efefef; width:94%;">
-    </center><br>
-    <p class="resume-prompt" style="margin-top:1%; margin-bottom: 1%;">
-      Prior to digital design, my background was in consumer products design and fashion. Intertwining principles of aesthetics, functionality, user experience, and market trends - my designs are deeply rooted in understanding the end-user's needs, preferences, and behaviors. This background renders me a distinctive and unique designer.</p>
+  <center>
+    <hr style="margin: 0; background-color: #efefef; width:98%; margin: 40px 0px;">
+  </center>
+
+    <p class="resume-prompt" style="margin-top:20px; margin-bottom: 5px;">
+      Prior to digital design, my background was in consumer products design and fashion. Intertwining principles of aesthetics, functionality, user experience and market trends - my designs are rooted in understanding and catering to users' needs, preferences and behaviours.</p>
   </td>
 </tr>
 </table>
-
-
-
 
 <!-- new section for Thinkway -->
 <table class="threecoloumntables">
@@ -612,7 +638,14 @@
 <table class="threecoloumntables">
   <tr>
     <td colspan="2">
-      <p style="background: linear-gradient(45deg, #516395, #516395, #516395, #a7a6ba, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2013 - 2016 | Associate, Product Approval for Disney Canada</p>
+      <p style="background: linear-gradient(45deg, #516395, #516395, #516395, #a7a6ba, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2013 - 2016 | Associate, Online Product Approval for Disney Canada</p>
+    </td>
+
+  </tr>
+  <tr>
+    <td colspan="2">
+      <p class="resume-prompt" style="margin:20px 0px;">
+        I worked with Disney Canada for two and half years as part of the Disney OPA team, working with the Canadian team and regularly between the U.S. Glendale office and with our Canadian licensees managing the product approval online portal and process.</p>
     </td>
   </tr>
   <tr>
@@ -680,20 +713,25 @@
             </td>
 
   </tr>
+  <tr>
+    <td colspan="2">
+      <p class="resume-prompt" style="margin: 20px 0px">
+        One of my acheivements was having my design chosen as part of a Mickey T-shirt collection sold at UNIQLO in commerating the new Shanghai Uniqlo flagship store opening.  This T-shirt was sold in Uniqlo stores across Shanghai and U.S. between 2016-2017.</p>
+    </td>
+  </tr>
 </table>
 
 <!--BLG Section 3 columns Star Wars -->
 
-
+<!--
 
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-    <!--<p class="resume-prompt">
-      I was with Disney Canada for two and half years. We worked regularly with the Disney Glendale team and the remaining time we met with licensees here in Canada managing the online product approval process. One of my special moments was having my design chosen to be sold as a T-shirt print at UNIQLO.</p>-->
+
   </td>
 </tr>
-</table>
+</table>-->
 
 
 
@@ -705,6 +743,14 @@
       <p style="background: linear-gradient(45deg, #516395, #516395, #516395, #516395, #dcdcdc, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato';margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2013 and earlier, with more on LinkedIn</p>
     </td>
   </tr>
+  <tr>
+    <td colspan="3">
+        <p class="resume-prompt" style="margin: 20px 0px;">
+          Upon working for National Bank Financial and various Canadian fashion companies for a decade - I packed up my life into two suitcases and in Fall 2012 moved to Rome, Italy for a year - only to find that 3 months later I would end up in Milan and be working for Dolce & Gabbana as an associate - working and living in a dream
+        </p>
+      </td>
+  </tr>
+
   <tr>
 
     <td class="threebythreegrid" style="border: 5px solid #ffffff;">
@@ -782,10 +828,12 @@
   <tr>
     <td style="width: 700px; vertical-align: top;" colspan="3">
       <br>
+      <p class="resume-prompt" style="margin-top:15px; margin-bottom: 25px;">
+        This background renders me as a distinctive and unique designer.</p>
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
-      <p class="resume-prompt" style="margin-top: 3%; margin-bottom: 3%;">
-      Please don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio. Kindly note that some projects are bound by non-disclosure agreements and thus cannot be shared openly.<br><br>
+      <p class="resume-prompt" style="margin-top: 25px; margin-bottom: 25px;">
+      Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio.<br><br>
       <center>
       <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks again for visiting. Have a great day ~</p>
     </center>
