--- a/portfolio.html
+++ b/portfolio.html
@@ -74,15 +74,15 @@
 
   <tr>
     <td colspan="3">
-      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 20px;">
-    <span style="font-family: 'oldenbury', serif; font-style: italic; font-weight: 900; font-style: italic; font-size: 16pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395);
+      <p class="resume-prompt" style="margin: 10px 0px;">
+    <span style="font-family: 'oldenbury', serif; font-style: normal; font-weight: 900; font-size: 14pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #a7a6ba);
   background-size: 100%;
   background-repeat: repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;">
-  Design transcends mere appearances &mdash; it's about how&nbsp;it&nbsp;functions.</span><br>
+  Design transcends mere appearances &mdash; it's about how it functions.</span><br>
       </p>
     </td>
   </tr>
@@ -93,7 +93,7 @@
       <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 20px;">
       <!--I use critical design thinking and thorough research to create impactful designs that enhance users' experiences &ndash; bringing user interface, user experience and digital design at the forefront.
       I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
-I use critical design thinking and comprehensive research to craft impactful designs that enrich user experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
+I employ critical design thinking and comprehensive research to craft impactful designs that enrich user experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
     </p>
       <p class="portfolio-tabs-blue " style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
 
