--- a/portfolio.html
+++ b/portfolio.html
@@ -361,7 +361,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
 
     <td class="threebythreegridaboutme" style="">
       <img alt="About Me Team Player" src="images/AboutMe-Icon-1.png" class="about-me-thumbnails">
-      <p>Lead by Example</p>
+      <p>Leads by Example</p>
     </td>
 
   </tr>
