--- a/portfolio.html
+++ b/portfolio.html
@@ -90,12 +90,12 @@
 
   <tr>
     <td colspan="3">
-      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 20px;">
+      <p class="resume-prompt" style="margin-top: 2px; margin-bottom: 5px;">
       <!--I use critical design thinking and thorough research to create impactful designs that enhance users' experiences &ndash; bringing user interface, user experience and digital design at the forefront.
       I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
-I employ critical design thinking and comprehensive research to craft impactful designs that enrich user experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
+I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
     </p>
-      <p class="portfolio-tabs-blue " style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
+      <p class="portfolio-tabs-blue " style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
 
           2020 - 2024 | Digital Designer - Borden Ladner Gervais LLP
       </p>
@@ -263,9 +263,15 @@ I employ critical design thinking and comprehensive research to craft impactful 
   <td colspan="3">
   <!--<p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
       As a digital designer specializing in web, apps, and social media platforms, my aim is in crafting designs that captivate audiences endlessly. I believe </p>-->
+      <p class="resume-prompt" style="margin:20px 0;">
+      <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.--> I delved into learning prompt engineering and AI tools, harnessing their potential to elevate designs to new heights.</p>
 
-      <p class="resume-prompt " style="margin-top: 20px; margin-bottom: 20px;">
-      I have skills in video creation and editing - integrating animation and sounds.  I work with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
+    <center>
+      <hr style="margin: 0; background-color: #efefef; width:94%; margin: 20px 0px;">
+    </center>
+
+      <p class="resume-prompt " style="margin-top: 20px; margin-bottom: 5px;">
+      I have skills in video creation and editing, integrating animation and sounds.  I collaborate with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
   <td>
 </tr>
 
@@ -332,12 +338,13 @@ I employ critical design thinking and comprehensive research to craft impactful 
    <tr>
      <td colspan="3">
 
-       <p class="resume-prompt" style="margin-top:20px; margin-bottom: 40px;">
-       <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.--> I delved into learning prompt engineering and AI tools, harnessing their potential to elevate designs to new heights.</p>
+       <p class="resume-prompt" style="margin-top:20px; margin-bottom: 30px;">
+       <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.I delved into learning prompt engineering and AI tools, harnessing their potential to elevate designs to new heights.--></p>
 
        <center>
-       <hr style="margin: 0; background-color: #efefef; width:94%; margin-top: 40px; margin-bottom: 10px;">
-     </center>
+         <hr style="margin: 0 0 3px 0; background-color: #efefef; width:98%;">
+         <hr style="margin: 3px 0 0 0; background-color: #efefef; width:98%;">
+      </center>
      </td>
    </tr>
 
@@ -348,19 +355,19 @@ I employ critical design thinking and comprehensive research to craft impactful 
 <table class="threecoloumntables wideaboutme">
   <tr>
 
-    <td class="threebythreegridaboutme" style="">
-      <img alt="About Me User Centric" src="images/AboutMe-Icon-3.png" class="about-me-thumbnails">
+    <td class="threebythreegridaboutme">
+      <img class="about-me-thumbnails" alt="About Me User Centric" src="images/AboutMe-Icon-3.png">
       <p>User-Centric</p>
     </td>
 
-    <td class="threebythreegridaboutme" style="">
-     <img alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png" class="about-me-thumbnails">
+    <td class="threebythreegridaboutme">
+     <img class="about-me-thumbnails" alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png">
      <p>Problem&nbsp;Solver</p>
     </td>
 
 
-    <td class="threebythreegridaboutme" style="">
-      <img alt="About Me Team Player" src="images/AboutMe-Icon-1.png" class="about-me-thumbnails">
+    <td class="threebythreegridaboutme">
+      <img class="about-me-thumbnails" alt="About Me Leads by example" src="images/AboutMe-Icon-1.png">
       <p>Leads by Example</p>
     </td>
 
@@ -377,7 +384,9 @@ I employ critical design thinking and comprehensive research to craft impactful 
     <td colspan="3" class="threebythreegrid">
 
       <center>
-      <hr style="margin: 0px 0px 0px 0px; background-color: #efefef; width:94%;">
+      <hr style="margin: 0 0 3px 0; background-color: #efefef; width:98%;">
+      <hr style="margin: 3px 0 0 0; background-color: #efefef; width:98%;">
+
     </center>
 
 
@@ -385,8 +394,8 @@ I employ critical design thinking and comprehensive research to craft impactful 
 
 
     <br>
- <p class="resume-prompt" style="margin-top:20px; margin-bottom: 40px;">
-  Each project I undertake is my commitment in delivering impactful visual designs that function intuitively and effectively.
+ <p class="resume-prompt" style="margin-top:20px; margin-bottom: 5px;">
+  Each project I undertake is a commitment to delivering impactful visual designs that function intuitively and effectively.
 </p>
 
 
@@ -579,7 +588,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </center>
 
     <p class="resume-prompt" style="margin-top:20px; margin-bottom: 5px;">
-      Prior to digital design, my background was in consumer products design and fashion. Intertwining principles of aesthetics, functionality, user experience and market trends - my designs are rooted in understanding and catering to users' needs, preferences and behaviours.</p>
+      Prior to digital design, my background was in consumer products design and fashion, with experience in packaging and marketing &ndash; intertwining principles of aesthetics, functionality, user experience and market trends.</p>
   </td>
 </tr>
 </table>
@@ -625,13 +634,6 @@ I employ critical design thinking and comprehensive research to craft impactful 
 </table>
 
 
-<table class="threecoloumntables">
-<tr>
-  <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-  </td>
-</tr>
-</table>
-
 
 <!--BLG Section Disney columns-->
 
@@ -644,8 +646,8 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="2">
-      <p class="resume-prompt" style="margin:20px 0px;">
-        I worked with Disney Canada for two and half years as part of the Disney OPA team, working with the Canadian team and regularly between the U.S. Glendale office and with our Canadian licensees managing the product approval online portal and process.</p>
+      <p class="resume-prompt" style="margin:10px 0px 20px;">
+        For two and a half years, I was a part of The Walt Disney Company Canada's Disney OPA team, facilitating collaboration between the Canadian team, the U.S. Glendale office, and our Canadian licensees. My role focused on managing the product approval online portal and process to ensure seamless creation of consumer products are in line with brand standards.</p>
     </td>
   </tr>
   <tr>
@@ -715,8 +717,8 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="2">
-      <p class="resume-prompt" style="margin: 20px 0px">
-        One of my acheivements was having my design chosen as part of a Mickey T-shirt collection sold at UNIQLO in commerating the new Shanghai Uniqlo flagship store opening.  This T-shirt was sold in Uniqlo stores across Shanghai and U.S. between 2016-2017.</p>
+      <p class="resume-prompt" style="margin: 20px 0px 5px">
+         <b>Achievement:</b> One of my designs was chosen for a Mickey T-shirt collection featured by UNIQLO in commemorating the launch of Shanghai's Uniqlo flagship store opening in 2016.  My design was sold at UNIQLO stores in Shanghai and across the United States between 2016-2017.</p>
     </td>
   </tr>
 </table>
@@ -740,13 +742,13 @@ I employ critical design thinking and comprehensive research to craft impactful 
 
   <tr>
     <td colspan="3">
-      <p style="background: linear-gradient(45deg, #516395, #516395, #516395, #516395, #dcdcdc, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato';margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2013 and earlier, with more on LinkedIn</p>
+      <p style="background: linear-gradient(45deg, #516395, #516395, #516395, #516395, #dcdcdc, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato';margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2013 and earlier</p>
     </td>
   </tr>
   <tr>
     <td colspan="3">
-        <p class="resume-prompt" style="margin: 20px 0px;">
-          Upon working for National Bank Financial and various Canadian fashion companies for a decade - I packed up my life into two suitcases and in Fall 2012 moved to Rome, Italy for a year - only to find that 3 months later I would end up in Milan and be working for Dolce & Gabbana as an associate - working and living in a dream
+        <p class="resume-prompt" style="margin: 10px 0px 20px;">
+          Before my time with Disney, I gained over a decade of experience working for National Bank Financial and various Canadian fashion companies. In the autumn of 2012, I took a leap of faith and moved to Rome, Italy, eventually relocating to Milan to begin a new chapter working for Dolce & Gabbana.
         </p>
       </td>
   </tr>
@@ -829,13 +831,16 @@ I employ critical design thinking and comprehensive research to craft impactful 
     <td style="width: 700px; vertical-align: top;" colspan="3">
       <br>
       <p class="resume-prompt" style="margin-top:15px; margin-bottom: 25px;">
-        This background renders me as a distinctive and unique designer.</p>
+        My designs are rooted in understanding and catering to users' needs, preferences and behaviours, making me a distinctive and unique designer.</p>
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
-      <p class="resume-prompt" style="margin-top: 25px; margin-bottom: 25px;">
-      Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio.<br><br>
+        <center>
+          <hr style="margin: 0 0 40px 0; background-color: #efefef; width:98%;">
+       </center>
+      <p class="resume-prompt" style="margin: 15px 55px; color: #ababab;">
+      Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. Don't hesitate to reach out and <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio.<br><br>
       <center>
-      <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks again for visiting. Have a great day ~</p>
+      <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks again for visiting. Have a great day! ~</p>
     </center>
       </p><br><br><br>
     </td>
