New user Interface

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,12 @@
     <link href="stylesheet/reset.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <link href="stylesheet/marbWhite_portfolio.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/app.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/carousel_portfolio-coding.css" type="text/css" rel="stylesheet">
+<!--    <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">  -->
+<!--    <link href="stylesheet/quote.css" type="text/css" rel="stylesheet"> -->
+<!--    <link href="stylesheet/app.css" type="text/css" rel="stylesheet">  -->
+<!--    <link href="stylesheet/carousel_portfolio-coding.css" type="text/css" rel="stylesheet">  -->
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/monitor_portfolio.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
   	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/threegridpopup.css" type="text/css" rel="stylesheet">
@@ -29,7 +30,7 @@
 
 <!--Portfolio page Nav Menu-->
 
-<table class="threecoloumntables" style="margin-top: 25px;">
+<table class="threecoloumntableshamburger" style="margin-top: 25px;">
   <tr>
     <td class="threebythreegridhamburger hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible; z-index:10;">
       <div class="hamburger-menu">
@@ -47,12 +48,49 @@
     </td>
 
     <td style="vertical-align: top; padding-left: 0px; padding-top: 5px;" class="portfolio-top-headline-td-width">
+
+      <!--monitor-->
+
+          <div class="container_one intro" id="backtotop">
+
+            <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
+            <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
+            <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
+            <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
+          <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
+            <div class="container_two">
+              <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1>
+              <div class="container_three">
+                <h2 class="left button-row"><a href="#hello" target="" title="ONEPAGER"></a></h2>
+                <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
+              <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
+                <h2 class="right_right button-row"><a href="#contact" title="CONTACT"></a></h2>
+              </div>
+            </div>
+            <div style="background: red;
+            background: -webkit-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Safari 5.1 to 6.0 */
+            background: -o-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Opera 11.1 to 12.0 */
+            background: -moz-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Firefox 3.6 to 15 */
+            background: linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* Standard syntax */
+                height: 5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
+            </div>
+          </div>
+
+          <center>
+            <div class="trapezoiddiv" style="transform: scale(2.5); width:30%;">
+              <div class="trapezoid">
+              </div>
+            </div>
+          </center>
+
+      <!--
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9; font-family: 'oldenbury', serif; font-weight: bold;">
-          Welcome and thanks for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
+          Welcome and thanks for visiting.
       </span></p>
       <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">
         <i class="fa fa-comment-o" aria-hidden="true" style=""></i> <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">edwinfcau@gmail.com</a>.
-      </p>
+      </p> -->
+
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
@@ -69,50 +107,8 @@
 
 
 
-<!--monitor-->
-<!--
-    <div class="container_one intro" id="backtotop">
--->
 
-<!--
-      <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
-      <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
-      <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
--->
-      <!-- <img src="images/introcloud1.png" class="img_introcloud1"> -->
-<!--      <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
--->
 
-    <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
-<!--      <div class="container_two">
-        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1>
-        <div class="container_three">
-          <h2 class="left button-row"><a href="#hello" target="" title="ONEPAGER"></a></h2>
-      <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
--->
-        <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
-<!--          <h2 class="right_right button-row"><a href="#contact" title="CONTACT"></a></h2>
-        </div>
-      </div>
--->
-
-    <!--<div style="background: red;
-    background: -webkit-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* Standard syntax */
-        height: 5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
-    </div>-->
-<!--
-    </div>
-
-    <center>
-    <div class="trapezoiddiv" style="transform: scale(2.5); width:30%;">
-    <div class="trapezoid">
-    </div>
-    </div>
-    </center>
--->
 
 <!--BLG Section 3 columns-->
 
@@ -121,7 +117,7 @@
   <tr>
     <td colspan="3">
       <p class="resume-prompt" style="margin: 10px 0px;">
-    <span style="font-family: 'oldenbury', serif; font-style: normal; font-weight: 900; font-size: 14pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #a7a6ba);
+    <span style="font-family: 'oldenbury', serif; font-style: normal; font-weight: 900; font-size: 20pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #a7a6ba);
   background-size: 100%;
   background-repeat: repeat;
   -webkit-background-clip: text;
